- fix MDEV-6802: MPXFAM::GetNextPos redefined modified:   storage/connect/filamap.h